[NEXUS-8011] Select task type before showing add panel

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -14473,7 +14473,7 @@
  * cls: 'x-form-readonly'
  */
 /* line 11, ../../../baseapp/packages/rapture-theme/sass/src/Ext/form/field/Base.scss */
-.x-form-field[readonly="readonly"] {
+.x-form-field[readonly="readonly"].x-form-field:not([role="combobox"]) {
   background-color: #ebebeb;
 }
 
